hildon-fm (1.7-1) unstable; urgency=low

  * UNRELEASED
  * Fixed column width problems. Patch from Tapani Pälli. Fixes: NB#34618
  * Fixed the ever-lasting updating banner.
  * Made an optimisation to file banner showing -- now it does not generate
    a flood of D-Bus activity when scanning a file list.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 30 Aug 2006 13:56:04 +0300

hildon-fm (1.6-1) unstable; urgency=low

  * Reverted a patch in 1.5-1 for the details dialog (caused a crash in
    some applications, but worked somehow for Sketch).
  * Fixed crash that happens with Glib compiled with thumb instructions.
    Fixes: NB#35428
  * Fixed the icon shown for a special Bluetooth device. Fixes: NB#35354
  * Fixed creating thumbnails for a long file list to be more efficient.
    Fixes: NB#21674

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 23 Aug 2006 13:59:25 +0300

hildon-fm (1.5-2) unstable; urgency=low

  * Same as 1.5-1, just removed one fixed bug from the list.
  * Fixed crash that happens with Glib compiled with thumb instructions.
    Fixes: NB#35428
  * Fixed the icon shown for a special Bluetooth device. Fixes: NB#35354
  * Fixed creating thumbnails for a long file list to be more efficient.
    Fixes: NB#21674

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 23 Aug 2006 12:35:27 +0300

hildon-fm (1.5-1) unstable; urgency=low

  * Fixed crash that happens with Glib compiled with thumb instructions.
    Fixes: NB#35428
  * Fixed the icon shown for a special Bluetooth device. Fixes: NB#35354
  * Fixed creating thumbnails for a long file list to be more efficient.
    Fixes: NB#21674
  * Fixed showing file details for remote files. Fixes: NB#37687

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 23 Aug 2006 12:35:27 +0300

hildon-fm (1.4-1) unstable; urgency=low

  * Replaced the show_all handler in HildonFileChooser with gtk_widget_show.
    Fixes: NB#36971